--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -1,11 +1,13 @@
-.userBlock {
-  width: 320px;
-  border: 2px solid black;
+.box {
+  width: 450px;
+  border: 4px solid black;
   border-radius: 10px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3),
+    -5px -5px 15px rgba(255, 255, 255, 0.5);
   margin: 20px auto;
 }
 
-.userTopBlock {
+.userBox {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,12 +22,12 @@
   background-color: black;
 }
 
-.userTopBlock > p {
+.userBox > p {
   font-size: 16px;
   color: hsl(0, 2.8%, 41.6%);
 }
 
-.userTopBlock p:nth-child(2) {
+.userBox p:nth-child(2) {
   color: black;
 }
 
